# crane_lifting_capacity

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-VPS-backend  Dockerfile-VPS-frontend  Makefile  README.md  compose-VPS.yaml  compose.yaml  deploy-VPS.sh  nginx.conf
backend/: .env.example  .gitignore  main.py  manage.py  pyproject.toml  requirements.txt
backend/app/: api.py  logging_config.py  models.py  server.py  settings.py
backend/app/db/: filters.py  models.py  queries.py  session.py
backend/app/schemas/: calc_requests.py  calc_responses.py  cranes.py
backend/app/services/: crane_attachments.py  lifting_capacity.py
backend/data/: app.db.sqlite3
backend/dev_scripts/: check_cranes_urls.py  cli_parser.py  dump_cranes_data.py  populate_db_from_xlsx.py  show_cranes_summary.py
backend/dev_scripts/populate_db_with_cranes/: __init__.py  data_extractor.py  db_operations.py  main.py  parse_attachments.py  parse_excel_data.py
backend/migrations/: README  env.py
backend/migrations/versions/: 0d0178c35c58_.py  477c9551f1eb_.py  59d1d459f3dc_.py  95fe341db985_.py  9ebad6e79606_.py  f82fe61361b3_.py
backend/tests/: conftest.py  test.db  tests.py
backend/tests/cranes_test_data/: Liebherr_LR1100.1.json  Liebherr_LR1100.json  Liebherr_LR1200.1.json  Liebherr_LR1200.json  Liebherr_LR1280.json  Liebherr_LR1300.json  Liebherr_LR1400.json  Liebherr_LR1500.json  Liebherr_LR1600.json  Liebherr_LR1750.json  Liebherr_LR1800.json  Liebherr_LTM1100-5.1.json  Liebherr_LTM1100.json  Liebherr_LTM1200-5.1.json  ЧМЗ_ДЭК254.json  (+26 more)
backend/utils/: __init__.py  lifting_capacity.py  math.py
(+215 files in other folders)
